# Progetto_Laboratorio

./: CMakeLists.txt  Cell.cpp  Cell.h  Controller.cpp  Controller.h  Formula.h  FormulaFactory.cpp  FormulaFactory.h  Max.h  Mean.h  Min.h  Model.cpp  Model.h  Observer.h  Somma.h  Subject.h  View.cpp  View.h  main.cpp
Google_Tests/: CMakeLists.txt  ControllerFixture.cpp  FactoryFixture.cpp  FormulaFixture.cpp  ModelFixture.cpp  ModelTest.cpp  runAllTests.cpp
